--- a/gestao_escolar/core/templates/alunos/aluno_lista.html
+++ b/gestao_escolar/core/templates/alunos/aluno_lista.html
@@ -13,6 +13,7 @@
                 <a href="{% url 'importar_alunos' %}">Importar Alunos</a>
                 <a href="{% url 'matricular_aluno' %}">Matrícula de Alunos</a>
                 <a href="{% url 'cadastro_aluno' %}">Cadastrar Novo Aluno</a>
+                <a href="{% url 'lista_turmas' %}">Listar Turmas</a>
             </ul>
         </nav>
         </header>
