--- a/gestao_escolar/core/templates/area_administracao.html
+++ b/gestao_escolar/core/templates/area_administracao.html
@@ -9,6 +9,7 @@
 <a href="{% url 'cadastro_professor' %}">Cadastro de Professores</a>
 <a href="{% url 'cadastro_turma' %}">Cadastro de Turmas</a>
 <a href="{% url 'lista_professores' %}">Listar Professores</a>
+<a href="{% url 'lista_turmas' %}">Listar Turmas</a>
 </ul>
     </nav>
 </header>
