--- a/gestao_escolar/core/templates/base.html
+++ b/gestao_escolar/core/templates/base.html
@@ -7,8 +7,8 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 <script src="{% static 'js/cadastro.js' %}"></script>
-
 </head>
 <body>
     <header class="main-header">
